--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 spring.main.allow-bean-definition-overriding=true
+spring.jpa.hibernate.ddl-auto= none
